# FitWeaver

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README.ru.md  TODO.md  bot_config.yaml.example  fitweaver_gui.py  garmin_fit_quick_start.md  get_fit.py  pyproject.toml  requirements.txt  run.py  run_pipeline.bat  run_pipeline.sh  sitecustomize.py  user_profile.yaml.example  validate_yaml.py  version.txt
.github/workflows/: ci.yml
Scripts/: __init__.py  __main__.py  archive_manager.py  build_fits.py  build_from_plan.py  check_fit.py  compare_build_modes.py  config.py  generate_from_yaml.py  logging_utils.py  orchestrator.py  pipeline_runner.py  plan_artifacts.py  plan_domain.py  plan_processing.py  plan_schema.py  plan_service.py  plan_validator.py  runtime_layout.py  sbu_block.py  state_manager.py  telegram_bot.py  workflow.py  workout_utils.py
Scripts/llm/: __init__.py  benchmark.py  client.py  llm_contract.yaml  prompt.py  request_cli.py  strict_examples.yaml  text_variations.txt
docs/: CHANGELOG.md  GARMIN_CALENDAR.md  GARMIN_PAYLOAD_SPEC.md  HOW_TO_LOAD.md  LEGACY_COMPAT.md  LLM_CONNECTION_PROFILE.md  LLM_VALIDATION_SYSTEM.md  PROJECT_FLOW.md  README.md  ROADMAP.md  SCRIPTS_DEPENDENCY_AUDIT.md  TELEGRAM_SETUP.md  YAML_GUIDE.md
examples/: README.md  example_drills.py  example_easy_run.py  example_intervals.py  example_long_run.py  example_strides.py  example_tempo.py
garmin_fit/: __init__.py  archive_manager.py  bot.py  build_fits.py  build_from_plan.py  check_fit.py  cli.py  compare_build_modes.py  config.py  generate_from_yaml.py  legacy_cli.py  llm_cli.py  logging_utils.py  orchestrator.py  pipeline_runner.py  plan_artifacts.py  plan_domain.py  plan_processing.py  plan_schema.py  plan_service.py  plan_validator.py  runtime_cli.py  runtime_layout.py  sbu_block.py  state_manager.py  telegram_bot.py  validate_cli.py  workflow.py  workout_utils.py
garmin_fit/llm/: __init__.py  benchmark.py  client.py  prompt.py  request_cli.py
src/: __init__.py
src/garmin_fit/: __init__.py  _shared_cli.py  archive_manager.py  bot.py  build_fits.py  build_from_plan.py  check_fit.py  cli.py  compare_build_modes.py  config.py  garmin_auth_manager.py  garmin_calendar_export.py  garmin_step_mapper.py  generate_from_yaml.py  legacy_cli.py  llm_cli.py  logging_utils.py  orchestrator.py  pipeline_runner.py  plan_artifacts.py  (+14 more)
tests/: test_000_temp_bootstrap.py  test_archive_manager.py  test_build_from_plan.py  test_compare_build_modes.py  test_config.py  test_direct_pipeline_e2e.py  test_garmin_calendar_delete.py  test_garmin_step_mapper.py  test_llm_benchmark.py  test_llm_client.py  test_llm_prompt.py  test_orchestrator.py  test_package_cli.py  test_plan_processing.py  test_plan_schema.py  test_plan_validator.py  test_runtime_layout.py  test_telegram_bot_cancel.py
(+15 files in other folders)
