[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-fit-generator"
version = "0.1.0"
description = "Generate Garmin FIT workout files from training plans."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fit_tool",
    "garmin-fit-sdk",
    "PyYAML",
    "pydantic>=2.0",
    "python-telegram-bot>=20.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
garmin-fit = "garmin_fit.cli:main"
garmin-fit-legacy = "garmin_fit.legacy_cli:main"
garmin-fit-runner = "garmin_fit.runner:main"
garmin-fit-bot = "garmin_fit.bot:main"
garmin-fit-llm = "garmin_fit.llm_cli:main"
garmin-fit-runtime = "garmin_fit.runtime_cli:main"
garmin-fit-validate = "garmin_fit.validate_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["garmin_fit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["sdk/", "examples/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# W191/W29x: whole codebase uses tabs — pre-existing style, not changing
ignore = ["E501", "W191", "W291", "W292", "W293"]

[tool.ruff.lint.per-file-ignores]
# Scripts/ and garmin_fit/ are compatibility shims — intentional re-exports
"Scripts/*" = ["F401", "E402", "I001", "F541"]
"garmin_fit/*" = ["F401", "I001"]

[tool.setuptools.package-data]
"garmin_fit.llm" = ["*.yaml", "*.txt"]
